# KVOptBench

./: .env.example  .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
examples/: example_experiment_config.yaml  generic_openai_compatible_config.yaml  golden_qasper_mock_config.yaml  lambda_cloud_vllm_openai_compatible_config.yaml  runpod_sglang_openai_compatible_config.yaml  runpod_vllm_openai_compatible_config.yaml  sglang_openai_compatible_config.yaml  vllm_openai_compatible_config.yaml
guides/: benchmark_validity.md  dataset_adapter_contract.md  datasets.md  first_real_benchmark.md  frontier_dataset_pack.md  metric_provenance.md  real_endpoint_vllm_sglang.md  reproducibility.md  runpod.md
kvoptbench/: __init__.py  __main__.py  cli.py  config.py  contracts.py  doctor.py  init.py  release.py  schemas.py  workflow.py
schemas/: README.md
tests/: test_beir_adapter.py  test_bfcl_adapter.py  test_cache_analysis.py  test_cache_experiments.py  test_cache_runner_e2e.py  test_ci_workflow.py  test_cli.py  test_config.py  test_dataset_cli.py  test_dataset_download_helpers.py  test_dataset_download_integration.py  test_dataset_manifest.py  test_dataset_registry.py  test_dataset_runner_compatibility.py  test_endpoint_client.py  test_engine_profiles.py  test_evaluators.py  test_golden_workflow.py  test_gutenberg_adapter.py  test_import_adapters.py  test_kv_offload_analysis.py  test_kv_offload_experiments.py  test_kv_offload_runner_e2e.py  test_kv_quantization_analysis.py  (+34 more)
(+132 files in other folders)
