[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kvoptbench"
version = "0.1.0"
description = "Cache-aware frontier LLM inference benchmark and strategy optimizer"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  {name = "SaiPranay Masadi"}
]
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pyyaml>=6.0.2",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "pandas>=2.2.0",
  "jinja2>=3.1.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0"
]

[project.optional-dependencies]
data = [
  "datasets>=2.20.0",
  "huggingface-hub>=0.24.0"
]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0"
]

[project.scripts]
kvoptbench = "kvoptbench.cli:app"

[tool.ruff]
line-length = 100

[tool.setuptools.packages.find]
include = ["kvoptbench*"]

[tool.setuptools.package-data]
kvoptbench = ["strategy/*.yaml", "telemetry/*.yaml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
